--- a/text-to-text/SignBank.ipynb
+++ b/text-to-text/SignBank.ipynb
@@ -286,8 +286,13 @@
         "    checkpoint_files = [f for f in listdir(checkpoint_dir) if re.match(r'checkpoint_step_\\d+\\.pt', f)]\n",
         "    if not checkpoint_files:\n",
         "        return None\n",
-        "    checkpoint_files.sort()\n",
-        "    latest_checkpoint = join(checkpoint_dir, checkpoint_files[-2 if len(checkpoint_files) > 1 else -1])\n",
+        "    \n",
+        "    maxnum = 0\n",
+        "    for file in checkpoint_files:\n",
+        "        tempnum = int(file.split(\"checkpoint_step_\")[1].split(\".pt\")[0])\n",
+        "        maxnum = max(maxnum, tempnum)\n",
+        "\n",
+        "    latest_checkpoint = join(checkpoint_dir, f\"checkpoint_step_{str(maxnum)}.pt\")\n",
         "    return latest_checkpoint\n",
         "\n",
         "\n",
